Removed some unused function, classes and imports